fixin alignment

--- a/style.css
+++ b/style.css
@@ -348,6 +348,7 @@ body {
  .header {
   background: url(images/desktop/image-header.jpg);
   background-size: cover;
+  background-position: bottom center;
   height: 100vh;
  }
  
